fixing buttons to not have blue text on safari

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,6 +44,7 @@ button {
   border-radius: 0.6rem;
   cursor: pointer;
   font-family: sniglet, Arial, sans-serif;
+  color: #000000;
   padding: 0;
   /* Disable text selection in buttons for touch devices */
   -webkit-user-select: none;
